k8s/workloads/home/syncthing/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: syncthing
  namespace: home
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: syncthing
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "22000"
        - ports:
            - port: "21027"
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: traefik
            io.kubernetes.pod.namespace: networking
      toPorts:
        - ports:
            - port: "8384"
  egress:
    - toCIDRSet:
        - cidr: 10.0.0.0/8
    - toCIDRSet:
        - cidr: 100.64.0.0/10
    - toCIDRSet:
        - cidr: 192.168.0.0/16
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
